[package]
name = "rataudio-rta"
description = "A ratatui widget for displaying an RTA audio meter in the terminal"
version = "0.1.0"
edition = "2024"
authors = ["Kasper Nyhus <kaspernyhuskaae@gmail.com>"]
homepage = "https://github.com/kaspernyhus/rataudio-rta"
repository = "https://github.com/kaspernyhus/rataudio-rta.git"
keywords = ["tui", "ratatui", "widget", "audio-meter"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"
license = "MIT"

[dependencies]
ratatui = { version = "0.29", default-features = false }

[dev-dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rand = "0.9.1"
